# mcp-server-semantic-calc

./: .gitignore  LICENSE  README.md  check_installation.sh  claude_config.json  claude_config_direct.json  direct_mcp_server.py  direct_mcp_server_fixed.py  install.py  install_package.bat  install_package.sh  install_with_uv.sh  make_executable.sh  mcp_config.json  mcp_wrapper.py  publish.sh  pyproject.toml  requirements.txt  run_server.py  run_with_uv.sh  setup.bat  setup.py  setup.sh  setup_direct.sh  setup_env.sh  setup_uv.sh  simplified_claude_config.json  test_dependencies.py  test_mcp.sh  ultra_simple_config.json  ultra_simple_config_fixed.json
.github/workflows/: pypi-publish.yml  python-publish.yml
.uv/: config.toml
examples/: analyze_emojikey.py  calculate_emoji_similarity.py  dimension_analysis.py  emoji_3d_visualization.py  vector_operations.py  visualize_emojikey.py
semantic_calculator/: __init__.py  __main__.py  compatibility.py  core.py  mcp.py  mcp_direct.py  mcp_server.py  simple_mcp.py
semantic_calculator/examples/: __main__.py  analyze_emojikey.py  calculate_emoji_similarity.py  vector_operations.py
tests/: test_calculator.py
